package autowarePackage;

import "TrajectoryPoint.proto";

message AUTOWAREMCM {
	optional int64 id = 1;
	optional int64 time = 2;
	optional int64 scenerio = 3;
	optional int64 targetStationID = 4;
	repeated its.TrajectoryPoint trajectory = 5;
	optional int64 adviceAccepted = 6;
}